--- a/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
@@ -496,7 +496,7 @@
     "$$\n",
     "\n",
     ":::{important}\n",
-    "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Dit wordt ook de _closed form_ oplossing voor lineaire regressiemodellen genoemd.\n",
+    "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Deze oplossing is dus **niet iteratief** en wordt in één keer (**_closed form_**) uitgerekend.\n",
     ":::\n"
    ]
   }
