--- a/book/math_foundations/linalg/lineaire_regressie/closed.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/closed.ipynb
@@ -6,7 +6,7 @@
             "source": [
                 "# _Ordinary least squares_\n",
                 "\n",
-                "Hier passen we de _closed form_ oplossing toe op de gesimuleerde koffieshop \n",
+                "Hier passen we de _closed form_ oplossing toe op de gesimuleerde koffieshop data.\n",
                 "\n",
                 "$$\n",
                 "\\hat{\\pmb{b}} = (\\pmb{X}^T\\pmb{X})^{-1}\\pmb{X}^T\\pmb{y}\n",
@@ -166,7 +166,7 @@
                 "\n",
                 "$\\pmb{X}^T\\pmb{X}$ is niet inverteerbaar (**\"singulier\"**) bij:\n",
                 "\n",
-                "- Perfecte _multicollineariteit_: Wanneer twee of meerdere features perfecte lineaire combinaties van elkaar zijn (of identiek aan elkaar).\n",
+                "- Perfecte **_multicollineariteit_**: Wanneer twee of meerdere features perfecte lineaire combinaties van elkaar zijn (of identiek aan elkaar).\n",
                 "- Meer features dan observaties: Bij $M < N$ in $X$, is $\\pmb{X}^T\\pmb{X}$ gegarandeerd singulier. De matrix $\\pmb{X}^T\\pmb{X}$ zal $N \\times N$ zijn maar een rang hebben van maximaal $M < N$.  \n",
                 "  \n",
                 "\n",
@@ -181,14 +181,14 @@
                 "  \n",
                 "Oplossingen:\n",
                 "- **Regularisatie** (Ridge, Lasso): Het toevoegen van een _penalty_ zoals $\\lambda\\pmb{I}$ (met $\\lambda\\geq0$) maakt $\\pmb{X}^T\\pmb{X} + \\lambda\\pmb{I}$ inverteerbaar.\n",
-                "- Feature selectie: Verwijderen van redundante of collineaire features.\n",
+                "- Feature selectie: Verwijderen van redundante of _collinear features_.\n",
                 "- Dimensionaliteitsreductie: PCA of andere technieken.\n",
-                "- Pseudo-inverse: Het gebruik van de Moore-Penrose pseudo-inverse.\n",
+                "- Pseudo-inverse: Het gebruik van de _Moore-Penrose pseudo-inverse_.\n",
                 "- Iteratieve methoden: **Gradient descent** vereist geen matrix inversie.  \n",
                 "  \n",
-                "Dit is waarom _iteratieve_ gradient-gebaseerde optimalisatiemethoden vaak de voorkeur genieten in moderne machine learning, vooral voor hoogdimensionale problemen.\n",
+                "Dit is waarom _iteratieve_ gradient-gebaseerde optimalisatiemethoden vaak de voorkeur genieten in moderne machine learning, vooral voor modellen veel parameters.\n",
                 "\n",
-                "Hieronder geven ze een voorbeeld van singulariteit door $M < N$."
+                "Hieronder illustreren we de situatie bij $M < N$."
             ]
         },
         {
