--- a/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
@@ -51,7 +51,7 @@
    "id": "f80e14de",
    "metadata": {},
    "source": [
-    "Bij de Monte Carlo sampling gaven we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. We zochten steeds naar een richting in de ruimte waarin we een _stapje naar beneden_ konden zetten. Het is echter wiskundig perfect mogelijk om op ieder punt te bepalen in welke richting de daling het grootst zal zijn. Dit brengt ons bij het concept van een **_raak- of tangentlijn_ op een bepaald punt van een functie waarvan de richtingscoëfficient (of _slope_) de \"_afgeleide_\" van die functie in dat punt wordt genoemd**."
+    "Bij de Monte Carlo sampling leveren we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. We zochten steeds naar een richting in de ruimte waarin we een _stapje naar beneden_ konden zetten. Het is echter wiskundig perfect mogelijk om op ieder punt te bepalen in welke richting de daling het grootst zal zijn. Dit brengt ons bij het concept van een **_raak- of tangentlijn_ op een bepaald punt van een functie waarvan de richtingscoëfficient (of _slope_) de \"_afgeleide_\" van die functie in dat punt wordt genoemd**. De raak-/tangentlijn van een functie $f$ in het punt $x$ moet gezien worden als de **_lokale lineaire benadering_ van die functie in dat punt**."
    ]
   },
   {
@@ -496,7 +496,7 @@
     "$$\n",
     "\n",
     ":::{important}\n",
-    "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Deze oplossing is dus **niet iteratief** en wordt in één keer (**_closed form_**) uitgerekend.\n",
+    "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** (_OLS_) oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Deze oplossing is puur analytisch (**_closed form_**) en dus **niet iteratief**.\n",
     ":::\n"
    ]
   }
