math foundations lesson 3

--- a/book/math_foundations/linalg/lineaire_regressie/closed.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/closed.ipynb
@@ -162,7 +162,7 @@
                 "Optimale parameterwaarden op basis van SSE _loss_ via één _batch_ berekening.\n",
                 "\n",
                 "## Nadeel\n",
-                "De _ordinary least squares_ oplossing heeft een belangrijke beperking: **we moeten de matrix $(\\pmb{X}^T\\pmb{X})^{-1}$ kunnen berekenen**. Dit vereist dat $\\pmb{X}^T\\pmb{X}$ **_volledig van rang is_** is.\n",
+                "De _ordinary least squares_ oplossing heeft een belangrijke beperking: **we moeten de matrix $(\\pmb{X}^T\\pmb{X})^{-1}$ kunnen berekenen**. Dit vereist dat $\\pmb{X}^T\\pmb{X}$ **_volledig van rang_** is.\n",
                 "\n",
                 "$\\pmb{X}^T\\pmb{X}$ is niet inverteerbaar (**\"singulier\"**) bij:\n",
                 "\n",
