--- a/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
@@ -230,7 +230,7 @@
     "$$\n",
     "\n",
     "\n",
-    "De _ketting-regel_ houdt in dat bij geneste functies $g(h(x))$, de afgeleide naar $x$ het product is van de afgeleides, beginnend bij de buitense functie.\n",
+    "De _ketting-regel_ houdt in dat bij geneste functies $g(h(x))$, de afgeleide naar $x$ het product is van de afgeleiden, beginnend bij de buitenste functie.\n",
     "\n",
     "$$\n",
     "\\frac{\\partial}{\\partial x}g(h(x)) = \\frac{\\partial g}{\\partial h}\\frac{\\partial h}{\\partial x}\n",
@@ -347,7 +347,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "De term $(-x_i)$ komt nu van de afgeleide van $y_i - b_1 - b_2x_i$ naar $b_2$. Aangezien we bij deze partiële afgeleide $b_1$ als gegeven beschouwen (en $y_i$ en $x_i$ sowieso gegeven zijn), kunnen we de binnenste functie herschrijven als $h(b_2) = c - x_ib_2$. Geometrisch komt dit overeen met een rechte met _slope_ $-x_i$."
+    "De term $(-x_i)$ komt nu van de afgeleide van $y_i - b_1 - b_2x_i$ naar $b_2$. Aangezien we bij deze partiële afgeleide $b_1$ als gegeven beschouwen (en $y_i$ en $x_i$ ook gegeven zijn), kunnen we de binnenste functie herschrijven als $h(b_2) = c - x_ib_2$. Geometrisch komt dit overeen met een rechte met _slope_ $-x_i$."
    ]
   },
   {
