math foundations labo 3 ready

--- a/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
@@ -51,7 +51,7 @@
    "id": "f80e14de",
    "metadata": {},
    "source": [
-    "Bij de Monte Carlo sampling leveren we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. We zochten steeds naar een richting in de ruimte waarin we een _stapje naar beneden_ konden zetten. Het is echter wiskundig perfect mogelijk om op ieder punt te bepalen in welke richting de daling het grootst zal zijn. Dit brengt ons bij het concept van een **_raak- of tangentlijn_ op een bepaald punt van een functie waarvan de richtingscoëfficient (of _slope_) de \"_afgeleide_\" van die functie in dat punt wordt genoemd**. De raak-/tangentlijn van een functie $f$ in het punt $x$ moet gezien worden als de **_lokale lineaire benadering_ van die functie in dat punt**."
+    "Bij de Monte Carlo sampling leveren we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. We zochten steeds naar een richting in de ruimte waarin we een _stapje naar beneden_ konden zetten. Het is echter wiskundig perfect mogelijk om op ieder punt te bepalen in welke richting de daling het grootst zal zijn. Dit brengt ons bij het concept van een **_raak- of tangentlijn_ op een bepaald punt van een functie waarvan de richtingscoëfficient (of _slope_) de \"_afgeleide_\" van die functie in dat punt wordt genoemd**. De raak-/tangentlijn van een functie $f$ in het punt $x$ moet gezien worden als de **_lokale lineaire benadering_ van die functie in dat punt**. Het bepalen van die lokale benadering (en dus de afgeleide) heet **het differentiëren van functies**."
    ]
   },
   {
