--- a/book/ml_principles/structured/trees.ipynb
+++ b/book/ml_principles/structured/trees.ipynb
@@ -329,7 +329,7 @@
             "id": "c853e2a4",
             "metadata": {},
             "source": [
-                "Om de performantie van _decision trees_ te evalueren wordt in de eerste plaats gekeken naar de metrieken die ook de training sturen (_Gini impurity/Entropy/Misclassification rate/MSE/MAR_).\n",
+                "Om de performantie van _decision trees_ te evalueren wordt in de eerste plaats gekeken naar de metrieken die ook de training sturen (_Gini impurity/Entropy/Misclassification rate/MSE/MAR/R²/etc._).\n",
                 "Omdat er een reëel gevaar bestaat voor _overfitting_ wordt veel belang gehecht aan de performantie bij ongeziene test data."
             ]
         },
