--- a/book/math_foundations/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/lineaire_regressie/grid.ipynb
@@ -249,10 +249,10 @@
                 "waarbij\n",
                 "\n",
                 "$$\n",
-                "f(\\pmb{x}) = \\pmb{X}\\pmb{b} = \\hat{\\pmb{y}}\n",
+                "f(\\pmb{x}) = \\pmb{X}\\pmb{\\hat{b}} = \\hat{\\pmb{y}}\n",
                 "$$\n",
                 "\n",
-                "De vector $\\pmb{y}$-hoedje ($\\hat{\\pmb{y}}$) staat voor onze _voorspelde waarden_ voor de eigenlijke fooien $\\pmb{y}$ _op basis van onze schattingen_ voor de parameter $b_1$, $b_2$ (de argumenten van de _functie_ $f(\\pmb{x})$) op een bepaald moment in het leerproces.\n",
+                "De vector $\\pmb{y}$-hoedje ($\\hat{\\pmb{y}}$) staat voor onze _voorspelde waarden_ voor de eigenlijke fooien $\\pmb{y}$ _op basis van onze schattingen_ voor de parameters $\\hat{\\pmb{b}} = \\begin{bmatrix} \\hat{b_1} & \\hat{b_2} \\end{bmatrix}^T$ (de argumenten van de _functie_ $f(\\pmb{x})$) op een bepaald moment in het leerproces.\n",
                 "\n",
                 ":::{note} _Squared_ $L^2$ _loss_\n",
                 "Merk op dat we de SSE _loss_ kunnen schrijven als:\n",
@@ -1447,7 +1447,7 @@
                 "\n",
                 "Een veelgebruikte maat om te evalueren hoe goed een bepaalde oplossing van een lineair regressiemodel de data beschrijft, is de **R-squared of $R^2$** waarde (ook wel **determinatiecoëfficiënt** genoemd).\n",
                 "\n",
-                "De $R^2$ waarde geeft aan welk percentage van de variantie in de target $\\pmb{y}$ verklaard wordt door het lineaire model. De formule is:\n",
+                "**De $R^2$ waarde geeft aan welk percentage van de variantie in de target $\\pmb{y}$ verklaard wordt door het lineaire model**. De formule is:\n",
                 "\n",
                 "$$\n",
                 "R^2 = 1 - \\frac{SS_{res}}{SS_{tot}}\n",
@@ -1455,7 +1455,7 @@
                 "\n",
                 "waarbij:\n",
                 "- $SS_{res} = \\sum_{i=1}^n(y_i - \\hat{y}_i)^2$ de som van gekwadrateerde residuen is (onze $SSE$)\n",
-                "- $SS_{tot} = \\sum_{i=1}^n(y_i - \\bar{y})^2$ de totale som van kwadraten is (variantie rond het gemiddelde)\n",
+                "- $SS_{tot} = \\sum_{i=1}^n(y_i - \\bar{y})^2$ de totale som van kwadraten is (dit komt overeen met de $SSE$ ten opzichte van een model waarbij $\\hat{b_1} = \\overline{\\pmb{y}} =  \\frac{\\sum_{i=1}^My_i}{M}$ en $\\hat{b_1}, \\hat{b_2}, \\ldots = 0$)\n",
                 "\n",
                 "### Interpretatie\n",
                 "- $R^2 = 1$: Het model verklaart 100% van de variantie (perfecte fit)\n",
