--- a/book/ml_principles/vision/cnns.ipynb
+++ b/book/ml_principles/vision/cnns.ipynb
@@ -536,23 +536,23 @@
                 "Convolutionele lagen worden afgewisseld met andere laagtypes waarin andere tensoroperaties toegepast worden. Ze vormen samen een meerlagige (\"diepe\"; _deep_) structuur. Voorbeelden van niet-convolutionele lagen/operaties zijn:\n",
                 "- Rectificatie via lineaire units (ReLU): $x^+ = max(0, x)$  \n",
                 "  \n",
-                "[![](https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/ReLU_and_GELU.svg/1920px-ReLU_and_GELU.svg.png){w=400px align=center}](https://en.wikipedia.org/wiki/Rectified_linear_unit)\n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/ReLU_and_GELU.svg/1920px-ReLU_and_GELU.svg.png)](https://en.wikipedia.org/wiki/Rectified_linear_unit)\n",
                 "\n",
                 "- _Pooling_: Downsampling via aggregatie (bv. _max pooling_)  \n",
                 "  \n",
-                "[![](https://upload.wikimedia.org/wikipedia/commons/b/bb/Convolutional_neural_network%2C_maxpooling.png){w=400px align=center}](https://en.wikipedia.org/wiki/Pooling_layer#Max_pooling)\n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/b/bb/Convolutional_neural_network%2C_maxpooling.png)](https://en.wikipedia.org/wiki/Pooling_layer#Max_pooling)\n",
                 "- _Drop out_: Random uitschakelen van connecties\n",
                 "\n",
-                "[![](https://upload.wikimedia.org/wikipedia/commons/e/ed/Dropout_mechanism.png){w=400px align=center}](https://en.wikipedia.org/wiki/Dilution_(neural_networks))\n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/e/ed/Dropout_mechanism.png)](https://en.wikipedia.org/wiki/Dilution_(neural_networks))\n",
                 "\n",
                 "- enz.  \n",
                 "  \n",
-                "[![](https://adamharley.com/nn_vis/images/convnet_480.png){w=400px align=center}](https://adamharley.com/nn_vis/cnn/3d.html)\n",
+                "[![](https://adamharley.com/nn_vis/images/convnet_480.png)](https://adamharley.com/nn_vis/cnn/3d.html)\n",
                 "  \n",
                 "## Parameters\n",
                 "De convolutionele _kernels_ zijn het voorwerp van training en hun elementen zijn de belangrijkste parameters van het model. Merk op dat iedere kernel ongewijzigd wordt toegepast op alle secties van de input. Iedere kernel heeft een maximal output bij zijn eigen specifieke patroon. Naast de kernels zijn er ook _offset_ termen voor elke output feature map; zogenaamde _bias_ termen. Naargelang de specifieke architectuur zijn er nog bijkomende parameters, zoals bijvoorbeeld lineaire gewichten bij _fully connected_ output lagen.\n",
                 "\n",
-                "[![](https://poloclub.github.io/cnn-explainer/assets/figures/convlayer_detailedview_demo.gif){w=400px align=center}](https://poloclub.github.io/cnn-explainer/)"
+                "[![](https://poloclub.github.io/cnn-explainer/assets/figures/convlayer_detailedview_demo.gif)](https://poloclub.github.io/cnn-explainer/)"
             ]
         },
         {
@@ -564,12 +564,12 @@
                 "  \n",
                 "**Bij computer vision is er veel variatie in _loss_ functies**. Bij classificatie wordt bijvoorbeeld vaak gewerkt met _cross-entropy_ (de \"afstand\" tussen output en target _class probabilities_), terwijl er voor objectdetectie kan gewerkt worden met de _Intersection over Union_ (ook gekend als _Jaccard index_).  \n",
                 "  \n",
-                "[![](https://upload.wikimedia.org/wikipedia/commons/2/2d/Intersection_over_Union_-_object_detection_bounding_boxes.jpg){w=400px align=center}](https://en.wikipedia.org/wiki/Jaccard_index)\n",
-                "[![](https://upload.wikimedia.org/wikipedia/commons/c/c7/Intersection_over_Union_-_visual_equation.png){w=400px align=center}](https://en.wikipedia.org/wiki/Jaccard_index)\n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/2/2d/Intersection_over_Union_-_object_detection_bounding_boxes.jpg)](https://en.wikipedia.org/wiki/Jaccard_index)\n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/c/c7/Intersection_over_Union_-_visual_equation.png)](https://en.wikipedia.org/wiki/Jaccard_index)\n",
                 "  \n",
                 "Een voorbeeld bij _metric/similarity learning_ is de zogenaamde _triplet loss_ functie waarbij de output vergeleken wordt met de output bij een (a) vergelijkbare en (b) niet-vergelijkbare input. Het is de bedoeling dat vergelijkbare inputs dichter bij elkaar komen te liggen in de output tensor-ruimte[^loc2vec]:\n",
                 "  \n",
-                "[![](https://upload.wikimedia.org/wikipedia/commons/2/27/Triplet_Loss_Minimization.png){w=400px align=center}](https://en.wikipedia.org/wiki/Triplet_loss)\n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/2/27/Triplet_Loss_Minimization.png)](https://en.wikipedia.org/wiki/Triplet_loss)\n",
                 "  \n",
                 "Bij de **_backward pass_** wordt de gradient van de _loss_ functie berekend met betrekking tot alle parameters en worden de schattingen, proportioneel aan de _learning rate_, verschoven in de tegenovergestelde richting van de gradient[^math_foundations]. Dit algoritme is beter bekend onder de naam **_backpropagation_**. Omdat _deep_ CNNs uit veel lagen bestaan, kan er tijdens het trainen met backpropagation een probleem ontstaan waarbij de gradient in de onderste lagen veel kleiner is dan voor de parameters in de bovenste lagen (dicht bij de output) - dit fenomeen staat bekend als _vanishing gradients_ en kan voor sterke (en zelfs extreme) vertraging in het leerproces zorgen.\n",
                 "  \n",
@@ -603,17 +603,21 @@
                 "Hier maakt het model voorspellingen over de exacte begrenzing van objecten op pixelniveau.\n",
                 "  \n",
                 "- [_Segment Anything_](https://github.com/facebookresearch/segment-anything)\n",
-                "\n",
+                "  \n",
+                "[![](../../../img/cv_tasks.png)](https://cs231n.stanford.edu/slides/2017/cs231n_2017_lecture11.pdf)\n",
+                "  \n",
                 "### _Keypoint_ detectie\n",
                 "Het model moet specifieke anatomische of structurele punten lokaliseren in beelden, zoals gewrichten bij mensen of knooppunten bij objecten.\n",
                 "  \n",
                 "- [_OpenPose_](https://github.com/CMU-Perceptual-Computing-Lab/openpose)\n",
                 "- [_ASMNet_](https://arxiv.org/pdf/2103.00119)\n",
                 "\n",
+                "[![](https://github.com/CMU-Perceptual-Computing-Lab/openpose/blob/master/.github/media/dance_foot.gif?raw=true)](https://github.com/CMU-Perceptual-Computing-Lab/openpose/tree/master)\n",
+                "\n",
                 "### Diepteschatting\n",
                 "Het model moet inschatten hoe ver objecten van de camera verwijderd zijn door zogenaamde _depth maps_ te voorspellen\n",
                 "  \n",
-                "- [_Depth Anything_](https://huggingface.co/spaces/depth-anything/Depth-Anything-V2)\n",
+                "- _Depth Anything_ [![Hugging Face Spaces](https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue)](https://huggingface.co/spaces/depth-anything/Depth-Anything-V2gg)\n",
                 "\n",
                 "### Tekstlokalisatie\n",
                 "Het model moet tekstuele regio's in beelden detecteren en lokaliseren (zonder de tekst zelf te herkennen). Dit is vaak de eerste stap in een OCR-pipeline.\n",
@@ -631,9 +635,11 @@
                 "- [_SimCLR_](https://research.google/blog/advancing-self-supervised-and-semi-supervised-learning-with-simclr/)\n",
                 "\n",
                 ":::{note} _Embeddings_\n",
-                "**_Embedding_ verwijst algemeen naar de techniek om via een machine learning model hoog-dimensionele data te vertalen naar lagere vectoriële ruimtes waarin betekenisvolle patronen en relaties behouden worden**. De resulterende vectoren worden **embeddings** genoemd.\n",
+                "**_Embedding_ verwijst algemeen naar de techniek om via een machine learning model hoog-dimensionele data te vertalen naar lagere vectoriële ruimtes waarin betekenisvolle patronen en relaties behouden worden**. De resulterende vectoren worden **embeddings** genoemd. \n",
                 "  \n",
-                "[![](https://img.shields.io/badge/Wikipedia-000?logo=wikipedia&logoColor=fff&style=flat)](https://en.wikipedia.org/wiki/Embedding_(machine_learning))\n",
+                "[![](https://img.shields.io/badge/Wikipedia-000?logo=wikipedia&logoColor=fff&style=flat)](https://en.wikipedia.org/wiki/Embedding_(machine_learning))  \n",
+                "\n",
+                "Door embeddings op hun beurt samen te drukken in 3/2D (via PCA of t-SNE) kunnen we het effect van embeddings ook [visueel evalueren](https://projector.tensorflow.org/).\n",
                 ":::\n",
                 "\n",
                 "## Ervaring\n",
@@ -677,6 +683,9 @@
                 "$$\n",
                 "F1 = 2 \\cdot \\frac{Precision \\cdot Recall}{Precision + Recall} = \\frac{2 \\cdot TP}{2 \\cdot TP + FP + FN}\n",
                 "$$\n",
+                "  \n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Precisionrecall.svg/350px-Precisionrecall.svg.png)](https://en.wikipedia.org/wiki/F-score)\n",
+                "  \n",
                 "#### _Multi class_\n",
                 "- **_Confusion matrix_**\n",
                 "```\n",
