replace several visuals with code

--- a/book/ml_principles/vision/intro.ipynb
+++ b/book/ml_principles/vision/intro.ipynb
@@ -362,11 +362,18 @@
     "  \n",
     "Naargelang de specifieke camerasensoren, zijn er per pixel andere **kanalen** (_**channels**_) beschikbaar. Daar gebeuren soms wel selecties en/of transformaties. Bij standaard sensoren hebben we drie kanalen: rood, groen en blauw (RGB). Soms is er slechts één kanaal (bv. Röntgen scans of RGB beelden die omgezet worden in grijswaarden). Via fusion met andere sensoren is er soms een extra kanaal met diepte-informatie (RGB-D). Bij hyperspectrale camera's zijn er honderden kanalen (overeenkomstig met verschillende golflengtes in het lichtspectrum) en wordt vaak gefocust op bepaalde _banden_ (bv. infrarood).\n",
     "  \n",
-    "[![](https://www.esa.int/var/esa/storage/images/esa_multimedia/images/2010/03/going_hyperspectral/9647946-3-eng-GB/Going_hyperspectral_article.jpg)](https://www.esa.int/Applications/Observing_the_Earth/Proba-1/Going_hyperspectral)\n",
+    "[![](https://www.spectralpython.net/_images/hypercube.jpg)](https://www.spectralpython.net/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "Tenslotte wordt bij bepaalde toepassingen ook gewerkt met _point clouds_ - voornamelijk afkomstig van LiDAR sensoren. Hier zijn specifieke uitdagingen omdat het om _sparse_ 3D features gaat.  \n",
     "  \n",
-    "[![](https://github.com/erksch/waymo-open-dataset-viewer/raw/master/screenshot.png)](https://github.com/erksch/waymo-open-dataset-viewer)\n",
+    "[![](https://miro.medium.com/v2/resize:fit:640/format:webp/1*N3wBVTOMubjAcgLKJUpGjQ.png)](https://medium.com/@BlanchR2/visualize-your-city-in-3d-a-quick-guide-to-lidar-point-clouds-in-python-00ae3cb2741b)\n",
     "\n",
     "## Variabiliteit\n",
     "\n",
@@ -383,7 +390,7 @@
     "  \n",
     "Wanneer het belangrijk is voor de use-case om dezelfde objecten te kunnen herkennen op verschillende afstanden, bij verschillende belichting, enz. , moet er extra aandacht gaan naar het weerspiegelen van de juiste variabiliteit in de trainingsdata. Het is in die context niet verwonderlijk dat de meest performante modellen voor beeldanalyse _in the wild_ afkomstig zijn van internetgiganten met rechtstreekse toegang tot enorme hoeveelheden natuurlijk beeldmateriaal zoals Google en Meta. In gecontroleerde settings zoals productielijnen wordt samen met een camerasensor ook specifieke belichting voorzien om variabiliteit te verkleinen.\n",
     "  \n",
-    "[![](https://techcrunch.com/wp-content/uploads/2024/04/Plant-sorting-machine-by-ISO-Group-powered-by-Robovision.png?resize=800,450)](https://techcrunch.com/2024/04/05/robovision-computer-vision-belgium/)\n",
+    "[![](https://advancedillumination.com/wp-content/uploads/2023/03/fig1-768x169.png)](https://advancedillumination.com/a-practical-guide-to-machine-vision-lighting/)\n",
     "## _Ground truth_\n",
     "\n",
     "_Supervised learning_ is de gouden standaard voor computer vision ML modellen. Het **verkrijgen van targets of zogenaamde _ground truth data_ (_class labels_, _bounding boxes_, segmentatie polygonen, _keypoints_, _captions_ enz.)** is echter niet vanzelfsprekend zoals bij het voorspellen van huisprijzen. Dit proces heet **beeldannotatie**. De grote doorbraken in vision AI zijn er gekomen dankzij enorme investeringen in annotatie door grote internetbedrijven. Er bestaan verschillende annotatieplatformen om dit proces minder arbeidsintensief en meer betrouwbaar te maken (bv. het oorspronkelijk Belgische [segments.ai](https://segments.ai/)).  \n",
