--- a/book/ml_principles/labo/taco.ipynb
+++ b/book/ml_principles/labo/taco.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![](https://img.shields.io/static/v1?message=Open%20in%20Colab&logo=googlecolab&labelColor=grey&color=yellow&logoColor=white&label=%20&style=flat-square)](https://colab.research.google.com/github/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labo/taco.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Gebaseerd op: [https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s](https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s)"
    ]
   },
@@ -13,7 +20,59 @@
    "source": [
     "# Setup\n",
     "\n",
-    "Eenmalige installatie van het [ultralitics](https://github.com/ultralytics/ultralytics) package,"
+    "Eenmalige installatie van het [ultralitics](https://github.com/ultralytics/ultralytics) package.\n",
+    "\n",
+    "## Colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colab = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ultralytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"/root/.config/Ultralytics/settings.json\", \"r\") as f:\n",
+    "    settings = json.load(f)\n",
+    "    settings[\"datasets_dir\"] = \"/contents\"\n",
+    "\n",
+    "with open(\"/root/.config/Ultralytics/settings.json\", \"w\") as f:\n",
+    "    json.dump(settings, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dev Container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# colab = False"
    ]
   },
   {
@@ -31,7 +90,6 @@
    },
    "outputs": [],
    "source": [
-    "# Install ultralitics package\n",
     "# !uv add ultralytics"
    ]
   },
@@ -63,6 +121,7 @@
     "import glob\n",
     "import os\n",
     "import random\n",
+    "import shutil\n",
     "from collections import Counter\n",
     "\n",
     "import cv2\n",
@@ -93,6 +152,20 @@
     "path = kagglehub.dataset_download(\"vencerlanz09/taco-dataset-yolo-format\")\n",
     "\n",
     "print(\"Data source import complete.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if colab:\n",
+    "    # Copy the contents of the directory instead of moving it\n",
+    "    destination = os.path.basename(path)\n",
+    "    if not os.path.exists(destination):\n",
+    "        shutil.copytree(path, destination)\n",
+    "    path = \"./taco-dataset-yolo-format\""
    ]
   },
   {
@@ -139,7 +212,7 @@
     "}\n",
     "\n",
     "# Save data.yaml file\n",
-    "data_yaml_path = \"/home/user/.cache/data.yaml\"\n",
+    "data_yaml_path = \"data.yaml\"\n",
     "with open(data_yaml_path, \"w\") as outfile:\n",
     "    yaml.dump(data_yaml, outfile, default_flow_style=False)"
    ]
@@ -342,11 +415,11 @@
     "# Initialize YOLOv11 model (pre-trained weights)\n",
     "model = YOLO(\"yolov8s.pt\")\n",
     "\n",
-    "save_dir = \"/home/user/.cache/runs/train/exp\"\n",
+    "save_dir = \"./runs/train/exp\"\n",
     "\n",
     "# Train model with Cosine Annealing learning rate scheduler\n",
     "model.train(\n",
-    "    data=\"/home/user/.cache/data.yaml\",\n",
+    "    data=data_yaml_path,\n",
     "    epochs=epochs,\n",
     "    batch=batch_size,\n",
     "    imgsz=imgsz,\n",
@@ -383,7 +456,7 @@
    },
    "outputs": [],
    "source": [
-    "best_model = YOLO(\"/home/user/.cache/runs/detect/train/weights/best.pt\")\n",
+    "best_model = YOLO(\"./runs/detect/train/weights/best.pt\")\n",
     "val_results = best_model.val()\n",
     "\n",
     "print(\"Best Validation Metrics from Best Model:\")\n",
@@ -409,7 +482,7 @@
    "outputs": [],
    "source": [
     "# Read the log file into a DataFrame\n",
-    "log_file = \"/home/user/.cache/runs/detect/train/results.csv\"\n",
+    "log_file = \"./runs/detect/train/results.csv\"\n",
     "log_data = pd.read_csv(log_file)\n",
     "\n",
     "# Check the first few rows of the data and column names\n",
@@ -577,7 +650,7 @@
    },
    "outputs": [],
    "source": [
-    "best_model = YOLO(\"/home/user/.cache/runs/detect/train/weights/best.pt\")\n",
+    "best_model = YOLO(\"./runs/detect/train/weights/best.pt\")\n",
     "test_results = best_model.val(data=\"data.yaml\", split=\"test\")"
    ]
   },
@@ -630,7 +703,7 @@
     "\n",
     "\n",
     "# Load the YOLO model\n",
-    "model = YOLO(\"/home/user/.cache/runs/detect/train/weights/best.pt\")\n",
+    "model = YOLO(\"./runs/detect/train/weights/best.pt\")\n",
     "\n",
     "# Path to the test images and corresponding labels (annotations)\n",
     "test_image_dir = path + \"/test/images/\"\n",
@@ -642,7 +715,7 @@
     ")  # Adjust for correct extension if needed\n",
     "\n",
     "# Output directory to save inference results\n",
-    "output_dir = \"/home/user/.cache/inference_results/\"\n",
+    "output_dir = \"./inference_results/\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Class names\n",
