--- a/book/ml_principles/labo/taco.ipynb
+++ b/book/ml_principles/labo/taco.ipynb
@@ -44,22 +44,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "with open(\"/root/.config/Ultralytics/settings.json\", \"r\") as f:\n",
-    "    settings = json.load(f)\n",
-    "    settings[\"datasets_dir\"] = \"/contents\"\n",
-    "\n",
-    "with open(\"/root/.config/Ultralytics/settings.json\", \"w\") as f:\n",
-    "    json.dump(settings, f)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,6 +103,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
+    "import json\n",
     "import os\n",
     "import random\n",
     "import shutil\n",
@@ -132,7 +117,7 @@
     "import seaborn as sns\n",
     "import yaml\n",
     "from PIL import Image, ImageDraw\n",
-    "from ultralytics import YOLO"
+    "from ultralytics import YOLO\n"
    ]
   },
   {
@@ -161,6 +146,13 @@
    "outputs": [],
    "source": [
     "if colab:\n",
+    "    with open(\"/root/.config/Ultralytics/settings.json\", \"r\") as f:\n",
+    "        settings = json.load(f)\n",
+    "        settings[\"datasets_dir\"] = \"/contents\"\n",
+    "\n",
+    "    with open(\"/root/.config/Ultralytics/settings.json\", \"w\") as f:\n",
+    "        json.dump(settings, f)\n",
+    "\n",
     "    # Copy the contents of the directory instead of moving it\n",
     "    destination = os.path.basename(path)\n",
     "    if not os.path.exists(destination):\n",
@@ -385,7 +377,7 @@
    "outputs": [],
    "source": [
     "# Define training parameters\n",
-    "epochs = 1  # 50\n",
+    "epochs = 5  # 50\n",
     "batch_size = 32\n",
     "imgsz = 640  # Image size\n",
     "optimizer_type = \"AdamW\"  # AdamW optimizer (recommended for better regularization)\n",
@@ -431,21 +423,6 @@
     "    val=True,  # Evaluate on validation set\n",
     "    save_dir=save_dir,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    "# List files and directories in save_dir\n",
-    "if os.path.exists(save_dir):\n",
-    "    print(os.listdir(save_dir))\n",
-    "else:\n",
-    "    print(f\"The directory '{save_dir}' does not exist.\")\n"
    ]
   },
   {
