--- a/book/ml_principles/vision/cnns.ipynb
+++ b/book/ml_principles/vision/cnns.ipynb
@@ -172,9 +172,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "- _Pooling_: Downsampling via aggregatie (bv. _max pooling_)  \n",
-                "  \n",
-                "[![](https://upload.wikimedia.org/wikipedia/commons/b/bb/Convolutional_neural_network%2C_maxpooling.png)](https://en.wikipedia.org/wiki/Pooling_layer#Max_pooling)"
+                "- _Pooling_: Downsampling via aggregatie (bv. _max pooling_)  "
             ]
         },
         {
@@ -276,8 +274,6 @@
                 "  \n",
                 "- [_Segment Anything_](https://github.com/facebookresearch/segment-anything)\n",
                 "  \n",
-                "[![](../../../img/cv_tasks.png)](https://cs231n.stanford.edu/slides/2017/cs231n_2017_lecture11.pdf)\n",
-                "  \n",
                 "### _Keypoint_ detectie\n",
                 "Het model moet specifieke anatomische of structurele punten lokaliseren in beelden, zoals gewrichten bij mensen of knooppunten bij objecten.\n",
                 "  \n",
@@ -359,7 +355,7 @@
                 "[![](https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Precisionrecall.svg/350px-Precisionrecall.svg.png)](https://en.wikipedia.org/wiki/F-score)\n",
                 "  \n",
                 "#### _Multi class_\n",
-                "- **_Confusion matrix_**\n",
+                "- _Confusion matrix_\n",
                 "```\n",
                 "                Voorspeld\n",
                 "              Kat  Hond  Vogel\n",
@@ -374,27 +370,27 @@
                 "$$\n",
                 "IoU = \\frac{|A \\cap B|}{|A \\cup B|}\n",
                 "$$\n",
-                "- **_Mean Average Precision_** (mAP): Gemiddelde van de _Average Precision_ over alle klassen. _Average Precision_ is het oppervlakte onder de precision-recall curve voor een bepaalde klasse. mAP combineert zowel de nauwkeurigheid van detecties als de volledigheid ervan. \n",
+                "- _Mean Average Precision_ (mAP): Gemiddelde van de _Average Precision_ over alle klassen. _Average Precision_ is het oppervlakte onder de precision-recall curve voor een bepaalde klasse. mAP combineert zowel de nauwkeurigheid van detecties als de volledigheid ervan. \n",
                 "\n",
                 "### Segmentatie\n",
-                "- **_Pixel Accuracy_**: Percentage correct geclassificeerde pixels\n",
-                "- **_Mean Intersection over Union_** (mIoU): Gemiddelde IoU over alle klassen\n",
+                "- _Pixel Accuracy_: Percentage correct geclassificeerde pixels\n",
+                "- _Mean Intersection over Union_ (mIoU): Gemiddelde IoU over alle klassen\n",
                 "\n",
                 "$$\n",
                 "mIoU = \\frac{1}{C} \\sum_{c=1}^C \\frac{TP_c}{TP_c + FP_c + FN_c}\n",
                 "$$\n",
-                "- **_Dice Coefficient_**: Meet de overlap tussen predicted en ground truth segmentaties. Vergelijkbaar met IoU maar geeft meer gewicht aan true positives. Varieert tussen 0 (geen overlap) en 1 (perfecte overlap).\n",
+                "- _Dice Coefficient_: Meet de overlap tussen predicted en ground truth segmentaties. Vergelijkbaar met IoU maar geeft meer gewicht aan true positives. Varieert tussen 0 (geen overlap) en 1 (perfecte overlap).\n",
                 "\n",
                 "$$\n",
                 "Dice = \\frac{2 \\cdot |A \\cap B|}{|A| + |B|}\n",
                 "$$ \n",
                 "\n",
                 "### _Keypoint_ detectie\n",
-                "- **_Percentage of Correct Keypoints_** (PCK): Percentage keypoints binnen een tolerantieafstand:\n",
-                "- **_Mean Per Joint Position Error_** (MPJPE): Gemiddelde Euclidische afstand tussen voorspelde en _ground truth keypoints_\n",
+                "- _Percentage of Correct Keypoints_ (PCK): Percentage keypoints binnen een tolerantieafstand:\n",
+                "- _Mean Per Joint Position Error_ (MPJPE): Gemiddelde Euclidische afstand tussen voorspelde en _ground truth keypoints_\n",
                 "\n",
                 "### OCR Metrics\n",
-                "- **_Character Error Rate_** (CER): Percentage foutief voorspelde karakters/woorden. Het is de verhouding tussen de _edit distance_ en het totale aantal karakters in de target. _Edit-distance_ meet het minimale aantal bewerkingen nodig om de voorspelde string om te zetten in de target string.\n",
+                "- _Character Error Rate_ (CER): Percentage foutief voorspelde karakters/woorden. Het is de verhouding tussen de _edit distance_ en het totale aantal karakters in de target. _Edit-distance_ meet het minimale aantal bewerkingen nodig om de voorspelde string om te zetten in de target string.\n",
                 "\n",
                 "## Voordelen\n",
                 "- Flexibel gebruik in verschillende domeinen\n",
