--- a/book/ml_principles/vision/intro.ipynb
+++ b/book/ml_principles/vision/intro.ipynb
@@ -386,7 +386,7 @@
     "- **Resolutie**: Zelfde objecten kunnen ook afhankelijk van de resolutie van de sensoren heel anders in beeld komen\n",
     "- **Optische lens**: Een lens kan voor onscherpte zorgen, maar ook specifieke vervormingen (bv. _fish eye_ lenzen)\n",
     "  \n",
-    "[![](https://www.researchgate.net/profile/Yohan-Dupuis/publication/301599480/figure/fig8/AS:667937144860676@1536260033134/Example-view-from-a-fisheye-camera-in-the-center-of-an-intersection-33.ppm)](https://www.researchgate.net/figure/Example-view-from-a-fisheye-camera-in-the-center-of-an-intersection-33_fig8_301599480)\n",
+    "[![](https://vip.bu.edu/files/2020/05/Edge_teaser_w_count.gif)](https://vip.bu.edu/projects/vsns/cossy/fisheye/rapid/)\n",
     "  \n",
     "Wanneer het belangrijk is voor de use-case om dezelfde objecten te kunnen herkennen op verschillende afstanden, bij verschillende belichting, enz. , moet er extra aandacht gaan naar het weerspiegelen van de juiste variabiliteit in de trainingsdata. Het is in die context niet verwonderlijk dat de meest performante modellen voor beeldanalyse _in the wild_ afkomstig zijn van internetgiganten met rechtstreekse toegang tot enorme hoeveelheden natuurlijk beeldmateriaal zoals Google en Meta. In gecontroleerde settings zoals productielijnen wordt samen met een camerasensor ook specifieke belichting voorzien om variabiliteit te verkleinen.\n",
     "  \n",
@@ -421,7 +421,10 @@
     "  \n",
     "[![](https://cdn.ncbi.nlm.nih.gov/pmc/blobs/5ec4/6219764/fee54eb3825c/pmed.1002683.g002.jpg?raw=true)](https://doi.org/10.1371/journal.pmed.1002683)  \n",
     "  \n",
-    "[![](https://thegradient.pub/content/images/size/w800/2020/11/main-8.png)](https://thegradient.pub/interpretability-in-ml-a-broad-overview/)"
+    "[![](https://thegradient.pub/content/images/size/w800/2020/11/main-8.png)](https://thegradient.pub/interpretability-in-ml-a-broad-overview/)\n",
+    "\n",
+    "## _Near realtime_ performantie\n",
+    "Vooral bij _closed-circuit television_ (CCTV) toepassingen (bv. _people counting_) is het vaak cruciaal om beeldverwerking aan zeer hoge _frame rates_ te kunnen doen. Dit is **niet vanzelfsprekend** in het geval van neurale netwerken omdat de tensoroperaties computationeel zeer kostelijk zijn. Om _near realtime_ te kunnen werken wordt een beroep gedaan op speciaal ontworpen \"kleine\" CNN architecturen (bv. MobileNet) die op relatief lage input resoluties werken en waarbij er ook **quantization** wordt toegepast op de parameters. **Quantization houdt algemeen in dat de precisie van parameters na het trainen wordt verlaagd** (bv. `int8` in plaat van `float32`)."
    ]
   }
  ],
