--- a/book/ml_principles/vision/intro.ipynb
+++ b/book/ml_principles/vision/intro.ipynb
@@ -424,7 +424,7 @@
     "[![](https://thegradient.pub/content/images/size/w800/2020/11/main-8.png)](https://thegradient.pub/interpretability-in-ml-a-broad-overview/)\n",
     "\n",
     "## _Near realtime_ performantie\n",
-    "Vooral bij _closed-circuit television_ (CCTV) toepassingen (bv. _people counting_) is het vaak cruciaal om beeldverwerking aan zeer hoge _frame rates_ te kunnen doen. Dit is **niet vanzelfsprekend** in het geval van neurale netwerken omdat de tensoroperaties computationeel zeer kostelijk zijn. Om _near realtime_ te kunnen werken wordt een beroep gedaan op speciaal ontworpen \"kleine\" CNN architecturen (bv. MobileNet) die op relatief lage input resoluties werken en waarbij er ook **quantization** wordt toegepast op de parameters. **Quantization houdt algemeen in dat de precisie van parameters na het trainen wordt verlaagd** (bv. `int8` in plaat van `float32`)."
+    "Vooral bij _closed-circuit television_ (CCTV) toepassingen (bv. _people counting_) is het vaak cruciaal om beeldverwerking aan zeer hoge _frame rates_ te kunnen doen. Dit is **niet vanzelfsprekend** in het geval van neurale netwerken omdat de tensoroperaties computationeel zeer kostelijk zijn. Om _near realtime_ te kunnen werken wordt een beroep gedaan op speciaal ontworpen \"kleine\" CNN architecturen (bv. MobileNet) die op relatief lage input resoluties werken en waarbij er ook **quantization** wordt toegepast op de parameters. **Quantization houdt algemeen in dat de precisie van parameters na het trainen wordt verlaagd** (bv. `int8` in plaat van `float32`). Daarnaast wordt ook gebruik gemaakt van **hardware accelerators** voor tensoroperaties zoals GPUs en TPUs."
    ]
   }
  ],
